<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPageId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/layoutId"
        android:layout_width="343dp"
        android:layout_height="376dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage"
        app:layout_constraintVertical_bias="1.0">

    </LinearLayout>

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="243dp"
        android:layout_height="198dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/login_image_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/login_image_1" />

    <EditText
        android:id="@+id/username"
        android:layout_width="165dp"
        android:layout_height="20dp"
        android:layout_marginTop="72dp"
        android:autofillHints="@string/login_email"
        android:background="#00000000"
        android:hint="@string/login_email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage" />

    <EditText
        android:id="@+id/password"
        android:layout_width="165dp"
        android:layout_height="20dp"
        android:autofillHints="@string/login_password"
        android:background="#00000000"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_login"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:background="@color/purple_700"
        android:text="@string/login_sign_up"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.092" />

</androidx.constraintlayout.widget.ConstraintLayout>